homebrewery-sotdl.css
/** Import Fonts **/
@import url('https://fonts.googleapis.com/css?family=IM+Fell+English');
@import url('https://fonts.googleapis.com/css?family=Uncial+Antiqua');
/** Defining fonts **/
@font-face {
  font-family: 'First Order';
  src: url('https://felipeh92.github.io/homebrewery-sotdl/fonts/firstv2.ttf')
}
@font-face {
  font-family: 'GothamBold';
  src: url('https://felipeh92.github.io/homebrewery-sotdl/fonts/GothamBold%20Regular.otf')
}
@font-face {
  font-family: 'GothamBook';
  src: url('https://felipeh92.github.io/homebrewery-sotdl/fonts/GothamBook%20Regular.otf')
}
@font-face {
  font-family: 'JSL Ancient';
  src: url('https://felipeh92.github.io/homebrewery-sotdl/fonts/jancieni.ttf')
}
@font-face {
  font-family: 'Poison Hope';
  src: url('https://felipeh92.github.io/homebrewery-sotdl/fonts/PoisonHope-Regular.otf')
}

/**  **/

.phb {
  font-family: Athelas;
  
  background: url('https://felipeh92.github.io/homebrewery-sotdl/images/sotdl-background-small.jpg');
  background-size: contain;
  background-repeat: no-repeat;
}

.phb h1{
  font-family: "First Order";
  font-size: 400%;
  text-align: center;
  text-shadow: 0px 0px 5px black;
  color:white;
  text-transform: uppercase;
  background-image: url('https://felipeh92.github.io/homebrewery-sotdl/images/h1.banner-large.png');
  background-size: 100% 100%;
  padding-top: 0.45em;
  padding-bottom : 25px;
  padding-left: 1.4cm;
  padding-right: 1.4cm;
  margin-left: -1.4cm;
  margin-right: -1.4cm;
  width: calc(100% + 2.8cm);
  box-sizing: border-box;
  -webkit-font-smoothing: antialiased;
}

.phb h1+p::first-letter {
  float: inherit;
  font-family: inherit;
  font-size: inherit;
  color: inherit;
  line-height: inherit;
}

.phb h2,.phb  h3,.phb  h4,.phb  h5,.phb  h6,.phb h7 { 
  font-family: "Portmanteau",'IM Fell English';
  text-transform : uppercase;
  text-align: left;
  color: rgb(155,7,25);
  font-weight: 500;
  line-height: 1.1;
}

.phb h3{
  border-bottom-style: none;
}

.phb h4{
	font-size: .425cm;
}

.phb h5{
	font-size: .375cm;
  border-bottom-style: solid;
  border-bottom-color: black;
  border-bottom-width: 1px;
}

.phb h6{
	font-size: .33cm;
    border-bottom-style: solid;
    border-bottom-color: black;
    border-bottom-width: 1px;
    color: black;
}

.phb p, .phb li, .phb ol{
	font-family: 'GothamBook';
    font-size: 1em;
  text-align: left;    
}

.phb table thead th {
  background-color: #000000;
  color: #ffffff;
  font-family: "GothamBook";
  font-size:.85em;
  padding-top: 3px;
  padding-bottom: 3px;
}
.phb table tbody tr{
  font-family: "GothamBook";
  font-size:.85em;
}

.phb table tbody tr:nth-child(odd){
    background-color: initial;
    font-family: "GothamBook";
  font-size:.85em;
}

.phb table tbody tr:nth-child(even) {
  background-color: #fff;
  font-family: "GothamBook";
  font-size:.85em;
}

.phb strong em, .phb em strong{
  color: rgb(155,7,25);
  font-style : normal;
  font-weight: bold;
}

.phb blockquote{
	border-image: url('https://felipeh92.github.io/homebrewery-sotdl/images/parchment.png') 50 round;
    background-color: transparent;
    background-image: url('https://felipeh92.github.io/homebrewery-sotdl/images/parchment-back.png');
    box-shadow: none;
    padding-left: 20px;
    padding-right:20px;
    padding-top:10px;
}

.phb blockquote h5{
	border: none;
    text-align: center;
    padding-bottom: 10px;
}

.phb blockquote p{
	font-size:0.83em;
}

.phb .descriptive{
	border: none;
    background-color: transparent;
    box-shadow: none;
    font-style: italic;
    padding-left:30px;
}

.phb .descriptive h5{
	font-style:normal;
    color:black;
    text-align:center;
}

.phb .footnote{
	color:#222;
    font-family: "First Order";
    font-size: 2.5em;
    width:100%;
    bottom:0px;
}

.phb .pageNumber {
    bottom:0px;
    vertical-align: middle;
}

.phb .pageNumber.auto{
	bottom:22px;
}

.phb .pageNumber.auto::after{
	height:22px;
}

.phb .pageNumber p, .phb .pageNumber.auto p{
	font-family: "First Order";
    font-size: 2.5em;
    color: #222;
    text-align: center;
}

.html-code code{
	visibility: visible;
    box-shadow: 1px 1px 1px black;
    background-color: #aaa;
    font-family: 'Lucida Console'
}

.phb hr{
	visibility: visible;
    border-style : solid;
    border-color: black;
    border-width: 1px 0px 0px 0px;
    position: relative;
}

.phb p+hr{
	top: -5px;
}


.phb .spell h4{
	font-size: 0.5em;
}

.phb hr+blockquote{
	border-style : none;
    background-image: none;
    background-color : transparent;
}

.phb::after {
	background: none;
    background-image: url(https://felipeh92.github.io/homebrewery-sotdl/images/page-number-pentagram.png);
    background-size: 100px 100px; 
    background-repeat: no-repeat;   
    background-position: 0px calc(100% - 0px);
    height: 100px
}


.phb:nth-child(odd):after {
    transform: scaleX(-1);
}

.phb:nth-child(even):after {
    transform: scaleX(1);
}


/** Monster Stat Block **/

.phb hr+blockquote{
	padding : 0px;
}

.phb hr+blockquote h1{
	font-family : Athelas;
    background-color: black;
    background-image : none;
    color : white;
    font-weight: bold;
    font-size: 1em;
    padding: 5px;
    float:left;
    margin: 0px;
    width:60%;
    text-align: left;
}

.phb hr+blockquote h2{
	font-family : Athelas;
    background-color: black;
    color : white;
    font-weight: bold;
    font-size: 0.9em;
    padding: 5px;
    float:right;
    width: 40%;
    margin : 0px;
    text-align:right;
}

.phb hr+blockquote h3{
  background-color: #BBB;
  color: black;
  padding: 3px;
  padding-left: 5px;
  font-size: 0.8em;
  font-family: 'GothamBook';
  font-weight: bold;
  border-style : none;
}

.phb hr+blockquote h2+p{
    clear : both;
    background-color : darkred;
    color: white;
    padding : 3px;
    padding-left: 5px;
}

.phb hr+blockquote h2+p+hr,
.phb hr+blockquote h3+hr{
	display:none;
}

.phb hr+blockquote hr+ul li {
	margin-left: 5px;
    font-family: Athelas;
}

.phb hr+blockquote hr {
	background-image : none;
    visibility: visible;
    border-style: solid;
    border-color: black;
    border-width: 1px 0px 0px 0px;
    position: relative;
}

.phb hr+blockquote h2:before{
	content: "Difficulty ";
}

